# Proyecto1-Embebidos

./: .gitignore  README  makefile
Code/: configure.ac
Code/Yocto-setup/: bblayers.conf
Code/include/: GPIO.h  say.h
Code/lib/: GPIO.c  Makefile.am  Makefile.in  say.c
Code/libGPIO/: CMakeLists.txt  README
Code/libGPIO/lib/: CMakeLists.txt
Code/libGPIO/share/: Doxyfile.in
Code/libGPIO/src/: testGPIO.c
Code/src/: Makefile.am  Makefile.in  main.c  testGPIO.c
Servidor/: makefile
Servidor Web/: makefile  server  server.c  server.py
Servidor Web/include/: server.h
Servidor Web/lib/: server.c
Servidor/include/: gpio.h
SmartH/app/: build.gradle
SmartH/app/src/androidTest/java/com/example/david/smarth/: ExampleInstrumentedTest.java
SmartH/app/src/main/: AndroidManifest.xml
SmartH/app/src/main/java/com/example/david/smarth/: Client.java  LoginActivity.java  config.java  display_image.java  main.java
SmartH/app/src/main/res/layout/: activity_display_image.xml  activity_login.xml  activity_main.xml
SmartH/app/src/main/res/values/: strings.xml
SmartH/app/src/test/java/com/example/david/smarth/: ExampleUnitTest.java
SmartH/gradle/wrapper/: gradle-wrapper.properties
Yocto-setup/: README  local.conf
lib/: gpio.c  makefile  server.c
libGPIO/: CMakeLists.txt  README
libGPIO/include/: GPIO.h
libGPIO/lib/: GPIO.c
libGPIO/src/: test.c  testGPIO.c
src/: main  main.c  makefile
